--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Pathway+Extreme:wght@100;200;300&family=Rajdhani:wght@400;500;600&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.App {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.title > h1 {
+  margin: 50px 0;
+  font-size: 35px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+
+.followers > div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: start;
+  margin: 0 auto;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+  max-width: 600px;
+  margin: 40px auto;
+}
+
+.prev-btn,
+.next-btn,
+.page-btn {
+  width: fit-content;
+  height: 30px;
+  padding: 10px;
+  margin: 5px 5px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: #99ccff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.active-btn {
+  background-color: #3399ff;
+  color: white;
 }
